# animesh

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  manifesto.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: architecture.yml  ci.yml
docs/: DATA_LIFECYCLE.md  QA.md  REQUIREMENTS_BIBLE.md  SOURCES_E2E_IMPLEMENTATION_PLAN.md  SOURCES_NEXT_STEPS.md  SOURCES_REUSE_CLEANUP_PLAN.md
docs/superpowers/specs/: 2026-06-06-sp1-local-library-design.md  2026-06-06-sp1.5-interactive-tui.md
migrations/: V0001__initial.sql  V0002__sp1_5_tui.sql  V0003__cover_ascii.sql  V0004__canonical_schema.sql  V0005__drop_legacy_tables.sql  V0006__source_observation_pipeline.sql  V0007__data_lifecycle_budget_and_schedule.sql
src/: config.rs  errors.rs  ids.rs  lib.rs  main.rs  time.rs
src/anilist/: mod.rs
src/canonical/: decision.rs  mod.rs  prompt.rs
src/commands/: context.rs  doctor.rs  drop.rs  follow.rs  list.rs  mod.rs  probe.rs  schedule.rs  sub.rs  sync.rs  unfollow.rs
src/context/: mod.rs
src/context/snapshots/: animesh__context__tests__context_json.snap  animesh__context__tests__context_markdown.snap
src/ingest/: budget.rs  follow.rs  mod.rs  observation.rs  parser.rs  refresh.rs  request.rs  service.rs
src/llm/: mod.rs
src/notifier/: macos.rs  mod.rs  ntfy.rs
src/observer/: mod.rs
src/picker/: mod.rs
src/renderer/: mod.rs
src/search/: mod.rs  query.rs  scope.rs  source_candidate.rs
src/sources/: anilist.rs  itunes.rs  jikan.rs  kitsu.rs  mod.rs  musicbrainz.rs  tvmaze.rs
src/store/: canonical_release.rs  canonical_schedule_event.rs  canonicalization_cache.rs  db.rs  engagement.rs  id_sql.rs  kv.rs  metadata_cache.rs  mod.rs  path.rs  raw_source_payload.rs  resolved_release.rs  search.rs  source_candidate.rs  source_observation.rs  source_parse_error.rs  source_ref.rs  source_ref_refresh_state.rs  source_search_cache.rs  tracked_item.rs  watch_progress.rs
src/sync/: engine.rs  mod.rs  verify.rs
src/tui/: app.rs  ascii_art.rs  command.rs  help.rs  integration_tests.rs  llm_context.rs  mod.rs  model.rs  palette.rs  pane.rs  subs.rs  theme.rs  toast.rs  view.rs  view_detail.rs
