[package]
name = "animesh"
version = "0.5.0"
edition = "2021"
authors = ["Abhishek Gautam"]
description = "Interactive TUI for tracking anime — local-first, AniList-backed"
license = "MIT"
repository = "https://github.com/Abhi-Gautam/com.git"
keywords = ["anime", "tui", "ratatui", "anilist"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
anyhow = "1.0"
crossterm = "0.27"
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
directories = "5"
ratatui = "0.28"
nucleo = "0.5"
open = "5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
url = { version = "2", features = ["serde"] }
toml = "0.8"
arboard = "3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
proptest = "1"
insta = { version = "1", features = ["yaml"] }
criterion = "0.5"
mockito = "1"
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
