[package]
name = "animesh"
version = "0.5.0"
edition = "2021"
authors = ["Abhishek Gautam"]
description = "Interactive TUI for tracking anime — local-first, AniList-backed"
license = "MIT"
repository = "https://github.com/Abhi-Gautam/com.git"
keywords = ["anime", "tui", "ratatui", "anilist"]
categories = ["command-line-utilities", "multimedia"]

[dependencies]
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
crossterm = "0.27"
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
directories = "5"
ratatui = "0.28"
nucleo = "0.5"
open = "5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
url = { version = "2", features = ["serde"] }
arboard = "3"

[dev-dependencies]
proptest = "1"
mockito = "1"
tempfile = "3"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
